--- a/contact.html
+++ b/contact.html
@@ -126,14 +126,14 @@
     </nav>
 </header>
 
-   <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
+   <<div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
     <h3 style="color: #00BFFF; margin-bottom: 15px;">Informasi Kontak</h3>
     <p><strong>📍 Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
-    <p><strong>📧 Email:</strong> <a href="mailto:jesikalaoly@gmail.com" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
+    <p><strong>📧 Email:</strong> <a href="mailto:jesikalaoly@gmail.com" style="color: #00BFFF; text-decoration: none;">jesikalaoly@gmail.com</a></p>
     <p><strong>📞 Telepon:</strong> (061) 821-1234</p>
     <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
 </div>
-
+       
    <!-- TESTIMONI PENGUNJUNG -->
 <div class="section-title" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
     <h3 style="color: #00BFFF; margin-bottom: 15px;">Testimoni Pengunjung</h3>
@@ -308,8 +308,7 @@
     }
 </style>
 
-
-    <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
+<div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
     <h3 style="color: #00BFFF; margin-bottom: 15px;">📍 Lokasi Kami</h3>
     <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18...etc" 
@@ -322,13 +321,12 @@
     </iframe>
 </div>
 
-   <!-- IKUTI KAMI SECTION -->
-<div class="contact-card social-section">
-    <h3>📣 Ikuti Kami</h3>
-    <div class="social-links">
-        <a href="#" target="_blank">Instagram</a>
-        <a href="#" target="_blank">Facebook</a>
-        <a href="#" target="_blank">Twitter</a>
+  <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); text-align: center;">
+    <h3 style="color: #00BFFF; margin-bottom: 15px;">📣 Ikuti Kami</h3>
+    <div style="font-size: 1.1em;">
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Instagram</a> |
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Facebook</a> |
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Twitter</a>
     </div>
 </div>
 
