--- a/contact.html
+++ b/contact.html
@@ -126,13 +126,14 @@
     </nav>
 </header>
 
-   <<div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
-    <h3 style="color: #00BFFF; margin-bottom: 15px;">Informasi Kontak</h3>
-    <p><strong>📍 Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
-    <p><strong>📧 Email:</strong> <a href="mailto:jesikalaoly@gmail.com" style="color: #00BFFF; text-decoration: none;">jesikalaoly@gmail.com</a></p>
-    <p><strong>📞 Telepon:</strong> (061) 821-1234</p>
-    <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
-</div>
+  <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
+     <h3 style="color: #00BFFF; margin-bottom: 15px;">Informasi Kontak</h3>
+     <p><strong>📍 Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
+     <p><strong>📧 Email:</strong> <a href="mailto:perpustakaan@usu.ac.id" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
+     <p><strong>📧 Email:</strong> <a href="mailto:jesikalaoly@gmail.com" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
+     <p><strong>📞 Telepon:</strong> (061) 821-1234</p>
+     <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
+ </div>
        
    <!-- TESTIMONI PENGUNJUNG -->
 <div class="section-title" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
