--- a/contact.html
+++ b/contact.html
@@ -126,14 +126,14 @@
     </nav>
 </header>
 
-  <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
-     <h3 style="color: #00BFFF; margin-bottom: 15px;">Informasi Kontak</h3>
-     <p><strong>📍 Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
-     <p><strong>📧 Email:</strong> <a href="mailto:perpustakaan@usu.ac.id" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
-     <p><strong>📧 Email:</strong> <a href="mailto:jesikalaoly@gmail.com" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
-     <p><strong>📞 Telepon:</strong> (061) 821-1234</p>
-     <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
- </div>
+  <div class="contact-card" style="margin-top: 30px; background: white; padding: 40px 25px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); min-height: 250px;">
+    <h3 style="color: #00BFFF; margin-bottom: 20px;">Informasi Kontak</h3>
+    <p><strong>📍 Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
+    <p><strong>📧 Email:</strong> <a href="mailto:perpustakaan@usu.ac.id" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
+    <p><strong>📧 Email Alternatif:</strong> <a href="mailto:jesikalaoly@gmail.com" style="color: #00BFFF; text-decoration: none;">jesikalaoly@gmail.com</a></p>
+    <p><strong>📞 Telepon:</strong> (061) 821-1234</p>
+    <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
+</div>
        
    <!-- TESTIMONI PENGUNJUNG -->
 <div class="section-title" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
@@ -309,25 +309,26 @@
     }
 </style>
 
-<div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
-    <h3 style="color: #00BFFF; margin-bottom: 15px;">📍 Lokasi Kami</h3>
+<!-- LOKASI KAMI -->
+<div class="contact-card location-section">
+    <h3>📍 Lokasi Kami</h3>
     <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18...etc" 
         width="100%" 
-        height="250" 
+        height="400"  <!-- UBAH INI agar kotaknya lebih panjang -->
         style="border:0; border-radius: 10px;" 
         allowfullscreen="" 
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
 </div>
-
-  <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); text-align: center;">
-    <h3 style="color: #00BFFF; margin-bottom: 15px;">📣 Ikuti Kami</h3>
-    <div style="font-size: 1.1em;">
-        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Instagram</a> |
-        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Facebook</a> |
-        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Twitter</a>
+    
+ <div class="contact-card" style="margin-top: 30px; background: white; padding: 40px 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); text-align: center; min-height: 200px;">
+    <h3 style="color: #00BFFF; margin-bottom: 20px;">📣 Ikuti Kami</h3>
+    <div style="font-size: 1.2em;">
+        <a href="#" style="margin: 0 20px; text-decoration: none; color: #333; transition: color 0.3s;">Instagram</a> |
+        <a href="#" style="margin: 0 20px; text-decoration: none; color: #333; transition: color 0.3s;">Facebook</a> |
+        <a href="#" style="margin: 0 20px; text-decoration: none; color: #333; transition: color 0.3s;">Twitter</a>
     </div>
 </div>
 
