--- a/contact.html
+++ b/contact.html
@@ -138,23 +138,20 @@
    <!-- TESTIMONI PENGUNJUNG -->
 <div class="section-title" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
     <h3 style="color: #00BFFF; margin-bottom: 15px;">Testimoni Pengunjung</h3>
-</div>
-
-<div class="section-content" style="display: flex; flex-direction: column; gap: 20px; animation: fadeInUp 1s ease forwards;">
-    <div class="testimoni-card">
-        <p>
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
             "Perpustakaan ini sangat nyaman dan koleksinya lengkap. Saya bisa mengerjakan tugas dengan tenang dan mendapatkan referensi yang saya butuhkan!"
         </p>
-        <p class="nama">– Rina, Mahasiswa Ilmu Komunikasi</p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Rina, Mahasiswa Ilmu Komunikasi</p>
     </div>
-
-    <div class="testimoni-card">
-        <p>
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
             "Layanannya sangat ramah dan teknologi digitalnya memudahkan saya mengakses jurnal dari rumah."
         </p>
-        <p class="nama">– Dimas, Mahasiswa Teknik Informatika</p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Dimas, Mahasiswa Teknik Informatika</p>
     </div>
 </div>
+
 
 <!-- CONTACT US SECTION -->
 <div class="container contact-section">
