--- a/index.html
+++ b/index.html
@@ -404,6 +404,23 @@
     <div class="section-title" style="margin-bottom: 20px;">
     <h3 style="color: #00BFFF;">Galeri Kegiatan Perpustakaan</h3>
 </div>
+    <div class="section-title">Galeri Kegiatan Perpustakaan</div>
+<div class="section-content">
+    <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Workshop Literasi" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Workshop Literasi Digital</p>
+        </div>
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Pelatihan Mahasiswa Baru</p>
+        </div>
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Kegiatan Membaca" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Kegiatan Membaca Bersama</p>
+        </div>
+    </div>
+</div>
 
 <div class="section-content">
     <div style="background: #ffffff; padding: 25px; border-radius: 12px; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);">
