--- a/index.html
+++ b/index.html
@@ -408,40 +408,25 @@
 <div class="section-content">
     <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
         <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Workshop Literasi" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c88027ff8f990581666d73068ddd510d_yfzrkh.jpg" alt="Workshop Literasi" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
             <p style="font-weight: bold; color: #00BFFF;">Workshop Literasi Digital</p>
         </div>
         <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
-            <p style="font-weight: bold; color: #00BFFF;">Pelatihan Mahasiswa Baru</p>
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/46c5ed9b1df5159a53f85439f49c6855_qsc3m6.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">BOOKs Club</p>
         </div>
         <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Kegiatan Membaca" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
-            <p style="font-weight: bold; color: #00BFFF;">Kegiatan Membaca Bersama</p>
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c7454a94c0a4da36c2d09520e4a48e69_y7i6li.jpg" alt="Kegiatan Membaca" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Diskusi Kelompok</p>
+        </div>
+         <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/8436ebb4226ae489715eb1ebefce17e6_xstqzr.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Storytelling</p>
         </div>
     </div>
 </div>
 
-<div class="section-content">
-    <div style="background: #ffffff; padding: 25px; border-radius: 12px; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);">
-        <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
-            <div style="text-align: center; min-width: 200px;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c88027ff8f990581666d73068ddd510d_yfzrkh.jpg" alt="Workshop Literasi" style="height: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.15);">
-                <p style="font-size: 0.9em; color: #333; margin-top: 8px;">Workshop Literasi</p>
-            </div>
-            <div style="text-align: center; min-width: 200px;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/46c5ed9b1df5159a53f85439f49c6855_qsc3m6.jpg" alt="BOOKs Club" style="height: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.15);">
-                <p style="font-size: 0.9em; color: #333; margin-top: 8px;">BOOKs Club</p>
-            </div>
-            <div style="text-align: center; min-width: 200px;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c7454a94c0a4da36c2d09520e4a48e69_y7i6li.jpg" alt="Diskusi Kelompok" style="height: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.15);">
-                <p style="font-size: 0.9em; color: #333; margin-top: 8px;">Diskusi Kelompok</p>
-            </div>
-            <div style="text-align: center; min-width: 200px;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/8436ebb4226ae489715eb1ebefce17e6_xstqzr.jpg" alt="Storytelling" style="height: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.15);">
-                <p style="font-size: 0.9em; color: #333; margin-top: 8px;">Storytelling</p>
-            </div>
-        </div>
+
         <p style="font-size: 0.95em; color: #555; margin-top: 20px; text-align: justify;">
             Galeri ini menampilkan beragam kegiatan literasi dan edukatif yang rutin diselenggarakan oleh perpustakaan untuk meningkatkan minat baca dan keterampilan informasi pengguna.
         </p>
