--- a/tabel.html
+++ b/tabel.html
@@ -26,6 +26,10 @@
             font-size: 18px;
         }
 
+        nav a:hover {
+            text-decoration: underline;
+        }
+
         h2 {
             text-align: center;
             margin-top: 30px;
