--- a/tabel.html
+++ b/tabel.html
@@ -2,59 +2,53 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabel Perkalian 10x10</title>
+    <title>Tabel Perkalian</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f8ff;
         }
 
         nav {
-            background-color: #00BFFF;
-            padding: 15px 20px;
-            text-align: center;
+            background-color: #333;
+            padding: 10px 20px;
         }
 
-        nav a {
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        nav ul li {
+            margin-right: 20px;
+        }
+
+        nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            margin: 0 15px;
-            font-size: 18px;
         }
 
-        nav a:hover {
+        nav ul li a:hover {
             text-decoration: underline;
         }
 
         h2 {
             text-align: center;
             margin-top: 30px;
-            color: #00BFFF;
-        }
-
-        .table-container {
-            overflow-x: auto;
-            margin: 20px auto;
-            max-width: 90%;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
 
         table {
             border-collapse: collapse;
-            width: 100%;
-            min-width: 600px;
+            margin: 30px auto;
+            text-align: center;
         }
 
         th, td {
-            border: 1px solid #ccc;
-            text-align: center;
+            border: 1px solid #000;
             padding: 10px;
         }
 
@@ -62,46 +56,61 @@
             background-color: #00BFFF;
             color: white;
         }
-
-        tr:nth-child(even) td {
-            background-color: #f9f9f9;
-        }
     </style>
 </head>
 <body>
 
+    <!-- Navbar -->
     <nav>
-        <a href="#">Beranda</a>
-        <a href="#">Profil</a>
-        <a href="#">Tabel Perkalian</a>
-        <a href="#">Kontak</a>
+        <ul>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="profil.html">Profil</a></li>
+            <li><a href="tabel.html">Tabel</a></li>
+        </ul>
     </nav>
 
     <h2>Tabel Perkalian 10 x 10</h2>
 
-    <div class="table-container">
-        <table>
-            <thead>
-                <tr>
-                    <th>x</th>
-                    <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th>
-                    <th>6</th><th>7</th><th>8</th><th>9</th><th>10</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><th>1</th><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td></tr>
-                <tr><th>2</th><td>2</td><td>4</td><td>6</td><td>8</td><td>10</td><td>12</td><td>14</td><td>16</td><td>18</td><td>20</td></tr>
-                <tr><th>3</th><td>3</td><td>6</td><td>9</td><td>12</td><td>15</td><td>18</td><td>21</td><td>24</td><td>27</td><td>30</td></tr>
-                <tr><th>4</th><td>4</td><td>8</td><td>12</td><td>16</td><td>20</td><td>24</td><td>28</td><td>32</td><td>36</td><td>40</td></tr>
-                <tr><th>5</th><td>5</td><td>10</td><td>15</td><td>20</td><td>25</td><td>30</td><td>35</td><td>40</td><td>45</td><td>50</td></tr>
-                <tr><th>6</th><td>6</td><td>12</td><td>18</td><td>24</td><td>30</td><td>36</td><td>42</td><td>48</td><td>54</td><td>60</td></tr>
-                <tr><th>7</th><td>7</td><td>14</td><td>21</td><td>28</td><td>35</td><td>42</td><td>49</td><td>56</td><td>63</td><td>70</td></tr>
-                <tr><th>8</th><td>8</td><td>16</td><td>24</td><td>32</td><td>40</td><td>48</td><td>56</td><td>64</td><td>72</td><td>80</td></tr>
-                <tr><th>9</th><td>9</td><td>18</td><td>27</td><td>36</td><td>45</td><td>54</td><td>63</td><td>72</td><td>81</td><td>90</td></tr>
-                <tr><th>10</th><td>10</td><td>20</td><td>30</td><td>40</td><td>50</td><td>60</td><td>70</td><td>80</td><td>90</td><td>100</td></tr>
-            </tbody>
-        </table>
-    </div>
+    <table id="perkalian">
+        <thead>
+            <tr>
+                <th>*</th>
+                <!-- Kolom Header 1-10 -->
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Baris akan diisi oleh JavaScript -->
+        </tbody>
+    </table>
+
+    <script>
+        const table = document.getElementById('perkalian');
+        const theadRow = table.querySelector('thead tr');
+
+        // Tambah header kolom 1-10
+        for (let i = 1; i <= 10; i++) {
+            const th = document.createElement('th');
+            th.textContent = i;
+            theadRow.appendChild(th);
+        }
+
+        // Tambah isi tabel
+        const tbody = table.querySelector('tbody');
+        for (let i = 1; i <= 10; i++) {
+            const row = document.createElement('tr');
+            const th = document.createElement('th');
+            th.textContent = i;
+            row.appendChild(th);
+
+            for (let j = 1; j <= 10; j++) {
+                const td = document.createElement('td');
+                td.textContent = i * j;
+                row.appendChild(td);
+            }
+
+            tbody.appendChild(row);
+        }
+    </script>
 
 </body>
 </html>
