--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
             <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/8436ebb4226ae489715eb1ebefce17e6_xstqzr.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
             <p style="font-weight: bold; color: #00BFFF;">Storytelling</p>
         </div>
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/3769719a5cb3bb49d41a6225d15b4084_j94wjv.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Pelatihan Mahasiswa</p>
+        </div>
     </div>
 </div>
 
