--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <li><a href="About.html">About</a></li>
         <li><a href="contact.html">Contact Us</a></li>
         <li><a href="http://localhost/tabel.php">PHP</a></li>
+        <li><a href="tabel.html">Tabel</a></li>
     </ul>
 </nav>
 </header>
