--- a/About.html
+++ b/About.html
@@ -165,6 +165,7 @@
             <li><a href="index.html">Homepage</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="tabel.html">Tabel</a></li>
         </ul>
     </nav>
 </header>
