--- a/tabel.html
+++ b/tabel.html
@@ -61,10 +61,11 @@
 <body>
 
     <!-- Navbar -->
-    <nav>
+     <nav>
         <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="profil.html">Profil</a></li>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="tabel.html">Tabel</a></li>
         </ul>
     </nav>
