--- a/tabel.html
+++ b/tabel.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Jesika Yusnita Laoly</title>
     <style>
+        /* RESET DAN DASAR */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f8fb;
+            color: #333;
+            line-height: 1.6;
+        }
+
         /* HEADER */
         header {
             background-color: #00BFFF;
@@ -21,130 +35,91 @@
 
         header img {
             height: 50px;
+            margin-bottom: 10px;
         }
 
-        header nav ul {
-            padding: 0;
+        nav ul {
             list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 10px;
         }
 
-        header nav ul li {
-            display: inline;
-            margin: 0 10px;
+        nav ul li {
+            margin: 10px;
         }
 
-        header nav ul li a {
+        nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s ease-in-out;
+            transition: color 0.3s;
         }
 
-        header nav ul li a:hover {
+        nav ul li a:hover {
             color: #FFD700;
         }
 
-        /* ANIMASI FADE-IN */
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 1s ease-out, transform 1s ease-out;
-        }
-
-        .visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* SECTION "TENTANG SAYA" */
-        .about {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 20px;
-            background: #f9f9f9;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        /* JUDUL HALAMAN */
+        h2 {
             text-align: center;
-        }
-
-        .about h2 {
+            margin-top: 30px;
             color: #00BFFF;
         }
 
-        .about p {
-            font-size: 16px;
-            line-height: 1.6;
+        /* TABEL PERKALIAN */
+        .table-container {
+            overflow-x: auto;
+            margin: 20px auto;
+            max-width: 95%;
         }
 
-        /* REKOMENDASI BUKU */
-        .rekomendasi {
-            text-align: center;
-            padding: 20px;
-        }
-
-        .buku-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-        }
-
-        .buku {
-            width: 220px;
-            padding: 10px;
-            background: white;
-            border-radius: 10px;
-            text-align: center;
-            transition: transform 0.3s ease-in-out;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-
-        .buku:hover {
-            transform: scale(1.05);
-        }
-
-        .buku img {
+        table {
+            border-collapse: collapse;
             width: 100%;
-            height: auto;
-            border-radius: 5px;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
-        .buku p {
-            font-size: 14px;
-            font-weight: bold;
-            margin: 10px 0;
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: center;
         }
 
-        .buku a {
-            display: block;
-            margin-top: 5px;
-            padding: 8px;
-            background: #00BFFF;
+        th {
+            background-color: #00BFFF;
             color: white;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-            transition: background 0.3s;
         }
 
-        .buku a:hover {
-            background: #005f9e;
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
         }
 
         /* FOOTER */
         footer {
             background-color: #00BFFF;
             color: white;
-            padding: 20px 10px;
             text-align: center;
-            animation: fadeIn 2s ease-in;
-            margin-top: 20px;
+            padding: 15px;
+            margin-top: 30px;
+            animation: fadeIn 1s ease-in;
         }
 
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
+        }
+
+        /* RESPONSIF */
+        @media (max-width: 600px) {
+            table {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
@@ -153,60 +128,65 @@
 <header>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
     <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-    <div class="hamburger" onclick="toggleMenu()">☰</div>
-<nav id="menuNav">
-    <ul>
-        <li><a href="index.html">Homepage</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="http://localhost/tabel.php">PHP</a></li>
-        <li><a href="tabel.html">Tabel</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="http://localhost/tabel.php">PHP</a></li>
+            <li><a href="tabel.html">Tabel</a></li>
+        </ul>
+    </nav>
 </header>
 
-    <h2>Tabel Perkalian 10 x 10</h2>
+<h2>Tabel Perkalian 10 x 10</h2>
 
+<div class="table-container">
     <table id="perkalian">
         <thead>
             <tr>
                 <th>*</th>
-                <!-- Kolom Header 1-10 -->
+                <!-- Kolom Header 1-10 akan ditambahkan dengan JS -->
             </tr>
         </thead>
         <tbody>
-            <!-- Baris akan diisi oleh JavaScript -->
+            <!-- Baris tabel akan diisi oleh JavaScript -->
         </tbody>
     </table>
+</div>
 
-    <script>
-        const table = document.getElementById('perkalian');
-        const theadRow = table.querySelector('thead tr');
+<footer>
+    &copy; 2025 Perpustakaan Jesika Yusnita Laoly. All rights reserved.
+</footer>
 
-        // Tambah header kolom 1-10
-        for (let i = 1; i <= 10; i++) {
-            const th = document.createElement('th');
-            th.textContent = i;
-            theadRow.appendChild(th);
+<script>
+    const table = document.getElementById('perkalian');
+    const theadRow = table.querySelector('thead tr');
+
+    // Tambah header kolom 1-10
+    for (let i = 1; i <= 10; i++) {
+        const th = document.createElement('th');
+        th.textContent = i;
+        theadRow.appendChild(th);
+    }
+
+    // Tambah isi tabel
+    const tbody = table.querySelector('tbody');
+    for (let i = 1; i <= 10; i++) {
+        const row = document.createElement('tr');
+        const th = document.createElement('th');
+        th.textContent = i;
+        row.appendChild(th);
+
+        for (let j = 1; j <= 10; j++) {
+            const td = document.createElement('td');
+            td.textContent = i * j;
+            row.appendChild(td);
         }
 
-        // Tambah isi tabel
-        const tbody = table.querySelector('tbody');
-        for (let i = 1; i <= 10; i++) {
-            const row = document.createElement('tr');
-            const th = document.createElement('th');
-            th.textContent = i;
-            row.appendChild(th);
-
-            for (let j = 1; j <= 10; j++) {
-                const td = document.createElement('td');
-                td.textContent = i * j;
-                row.appendChild(td);
-            }
-
-            tbody.appendChild(row);
-        }
-    </script>
+        tbody.appendChild(row);
+    }
+</script>
 
 </body>
 </html>
