--- a/contact.html
+++ b/contact.html
@@ -123,6 +123,7 @@
             <li><a href="About.html">About</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="tabel.html">Tabel</a></li>
+            <li><a href="http://localhost/tabel.php">PHP</a></li>
         </ul>
     </nav>
 </header>
