--- a/tabel.html
+++ b/tabel.html
@@ -2,191 +2,115 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Jesika Yusnita Laoly</title>
+    <title>Tabel Perkalian</title>
     <style>
-        /* RESET DAN DASAR */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f8fb;
-            color: #333;
-            line-height: 1.6;
+            margin: 0;
+            padding: 0;
         }
 
-        /* HEADER */
-        header {
-            background-color: #00BFFF;
-            color: white;
-            padding: 20px 10px;
-            text-align: center;
-            animation: slideDown 1s ease-out;
-        }
-
-        @keyframes slideDown {
-            from { transform: translateY(-100px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-
-        header img {
-            height: 50px;
-            margin-bottom: 10px;
+        nav {
+            background-color: #333;
+            padding: 10px 20px;
         }
 
         nav ul {
-            list-style: none;
+            list-style-type: none;
+            margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 10px;
         }
 
         nav ul li {
-            margin: 10px;
+            margin-right: 20px;
         }
 
         nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s;
         }
 
         nav ul li a:hover {
-            color: #FFD700;
+            text-decoration: underline;
         }
 
-        /* JUDUL HALAMAN */
         h2 {
             text-align: center;
             margin-top: 30px;
-            color: #00BFFF;
-        }
-
-        /* TABEL PERKALIAN */
-        .table-container {
-            overflow-x: auto;
-            margin: 20px auto;
-            max-width: 95%;
         }
 
         table {
             border-collapse: collapse;
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin: 30px auto;
+            text-align: center;
         }
 
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #000;
             padding: 10px;
-            text-align: center;
         }
 
         th {
             background-color: #00BFFF;
             color: white;
         }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        /* FOOTER */
-        footer {
-            background-color: #00BFFF;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 30px;
-            animation: fadeIn 1s ease-in;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        /* RESPONSIF */
-        @media (max-width: 600px) {
-            table {
-                font-size: 14px;
-            }
-        }
     </style>
 </head>
 <body>
 
-<header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <!-- Navbar -->
     <nav>
         <ul>
-            <li><a href="index.html">Homepage</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="http://localhost/tabel.php">PHP</a></li>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="profil.html">Profil</a></li>
             <li><a href="tabel.html">Tabel</a></li>
         </ul>
     </nav>
-</header>
 
-<h2>Tabel Perkalian 10 x 10</h2>
+    <h2>Tabel Perkalian 10 x 10</h2>
 
-<div class="table-container">
     <table id="perkalian">
         <thead>
             <tr>
                 <th>*</th>
-                <!-- Kolom Header 1-10 akan ditambahkan dengan JS -->
+                <!-- Kolom Header 1-10 -->
             </tr>
         </thead>
         <tbody>
-            <!-- Baris tabel akan diisi oleh JavaScript -->
+            <!-- Baris akan diisi oleh JavaScript -->
         </tbody>
     </table>
-</div>
 
-<footer>
-    &copy; 2025 Perpustakaan Jesika Yusnita Laoly. All rights reserved.
-</footer>
+    <script>
+        const table = document.getElementById('perkalian');
+        const theadRow = table.querySelector('thead tr');
 
-<script>
-    const table = document.getElementById('perkalian');
-    const theadRow = table.querySelector('thead tr');
-
-    // Tambah header kolom 1-10
-    for (let i = 1; i <= 10; i++) {
-        const th = document.createElement('th');
-        th.textContent = i;
-        theadRow.appendChild(th);
-    }
-
-    // Tambah isi tabel
-    const tbody = table.querySelector('tbody');
-    for (let i = 1; i <= 10; i++) {
-        const row = document.createElement('tr');
-        const th = document.createElement('th');
-        th.textContent = i;
-        row.appendChild(th);
-
-        for (let j = 1; j <= 10; j++) {
-            const td = document.createElement('td');
-            td.textContent = i * j;
-            row.appendChild(td);
+        // Tambah header kolom 1-10
+        for (let i = 1; i <= 10; i++) {
+            const th = document.createElement('th');
+            th.textContent = i;
+            theadRow.appendChild(th);
         }
 
-        tbody.appendChild(row);
-    }
-</script>
+        // Tambah isi tabel
+        const tbody = table.querySelector('tbody');
+        for (let i = 1; i <= 10; i++) {
+            const row = document.createElement('tr');
+            const th = document.createElement('th');
+            th.textContent = i;
+            row.appendChild(th);
+
+            for (let j = 1; j <= 10; j++) {
+                const td = document.createElement('td');
+                td.textContent = i * j;
+                row.appendChild(td);
+            }
+
+            tbody.appendChild(row);
+        }
+    </script>
 
 </body>
 </html>
