--- a/index.html
+++ b/index.html
@@ -151,27 +151,19 @@
 <body>
 
 <header>
-    <div class="video-container">
-        <video autoplay muted loop playsinline>
-            <source src="https://youtu.be/2dj56Wwz1l0?feature=shared" type="video/webm">
-        </video>
-        <div class="overlay"></div>
-    </div>
-    <div class="header-content">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-        <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="tabel.html">Tabel</a></li>
-                <li><a href="http://localhost/tabel.php">PHP</a></li>
-            </ul>
-        </nav>
-    </div>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+<nav id="menuNav">
+    <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="tabel.html">Tabel</a></li>
+        <li><a href="http://localhost/tabel.php">PHP</a></li>
+    </ul>
+</nav>
 </header>
-
 
 <!-- TENTANG SAYA -->
 <div class="about fade-in">
